--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
     <title>jag är för bra</title>
-    <link rel="stylesheet" href=index.css>
+    <link rel="stylesheet" href=style.css>
 </head>
 <body>
     <div class="parent">
